--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,3 +23,21 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    # Analyze repositories source metrics:
+    # Create (or update) CODE_METRICS.md file.
+    - name: .NET code metrics
+      id: dotnet-code-metrics
+      uses: dotnet/samples/github-actions/DotNet.GitHubAction@main
+      with:
+        owner: ${{ github.repository_owner }}
+        name: ${{ github.repository }}
+        branch: ${{ github.ref }}
+        dir: ${{ './github-actions/DotNet.GitHubAction' }}
+    # Create a pull request if there are changes.
+    - name: Create pull request
+      uses: peter-evans/create-pull-request@v3.4.1
+      if: ${{ steps.dotnet-code-metrics.outputs.updated-metrics }} == 'true'
+      with:
+        title: '${{ steps.dotnet-code-metrics.outputs.summary-title }}'
+        body: '${{ steps.dotnet-code-metrics.outputs.summary-details }}'
+        commit-message: '.NET code metrics, automated pull request.'
